--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,7 @@ $select-height: 40px;
 
 //Variables
 $small-desktop: 1150px;
+$detailsBreakpoint: 1096px;
 $xs-desktop: 930px;
 $tablet: 780px;
 $xs-tablet: 705px;
@@ -33,6 +34,12 @@ $xs-mobile: 380px;
     @content;
   }
 }
+@mixin dt-break {
+  @media (max-width: #{$detailsBreakpoint}) {
+    @content;
+  }
+}
+
 
 @mixin xs-desktop {
   @media (max-width: #{$xs-desktop}) {
@@ -102,6 +109,7 @@ header {
   justify-content: space-between;
   // z-index: 100;
   position: relative;
+  z-index: 100;
 
 
   h1 {
@@ -692,39 +700,45 @@ main {
 }
 
 //DETAILS SECTION
-.movie-trailer {
-  margin-bottom: 1.5rem;
-  a {
-    cursor: pointer;
-    background-color: transparent;
-    color: rgb(238, 225, 248);
-    padding: 0.6rem 2rem;
-    border: none;
-    margin-top: 1rem;
-    letter-spacing: 1px;
-    color: rgb(230, 207, 245);
-    letter-spacing: 2px;
-    font-family: "Bebas Neue", cursive;
-    font-size: 1.3rem;
-    // background-color: rgb(158, 61, 238);
-    background-image: linear-gradient(
-      to bottom right,
-      rgb(160, 63, 240),
-      rgba(84, 29, 139, 0.788)
-    );
-  }
+.about-movie{
+  display: flex;
 }
 
 #movie-banner {
   width: 100vw;
   margin: 0 auto;
   background-position: top;
-  background-size: 100%;
-  height: 50vh;
+  background-size: cover;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+
+  &:after{
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(31, 28, 28, 0.705), rgba(19, 19, 17, 0.692));
+    pointer-events: none;
+  }
+
+  .movie-trailer{
+    position: absolute;
+    top: 50%;
+    z-index: 100;
+    a{
+      // background-color: none;
+      font-size: 3rem;
+      color: rgb(158, 61, 238);
+      transition: 0.3s ease;
+      &:hover{
+        color: rgb(183, 114, 240);;
+      }
+    }
+  }
 
   #searchInput,
   #search {
@@ -732,12 +746,14 @@ main {
   }
 }
 
-a {
-  text-decoration: none;
+.back-home{
+  // background-color: red;
+  a{
+    text-decoration: none;
   color: rgba(230, 207, 245, 0.911);
   letter-spacing: 1px;
   font-family: "Bebas Neue", cursive;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   background-color: transparent;
   // border: solid 1px rgba(53, 50, 66, 0.863);
   background-image: linear-gradient(
@@ -746,80 +762,215 @@ a {
     rgba(84, 29, 139, 0.788)
   );
   padding: 0.5rem 1rem;
+  @include mobile{
+    font-size: 1rem;
+    padding: 0.4rem 0.7rem;
+  }
+  }
 }
+
+// .back-home{
+//   a{
+//     text-decoration: none;
+//   color: rgba(230, 207, 245, 0.911);
+//   letter-spacing: 1px;
+//   font-family: "Bebas Neue", cursive;
+//   font-size: 1.1rem;
+//   background-color: transparent;
+//   // border: solid 1px rgba(53, 50, 66, 0.863);
+//   background-image: linear-gradient(
+//     to bottom right,
+//     rgb(160, 63, 240),
+//     rgba(84, 29, 139, 0.788)
+//   );
+//   padding: 0.5rem 1rem;
+//   @include mobile{
+//     font-size: 1rem;
+//     padding: 0.4rem 0.7rem;
+//   }
+//   }
+// }
+// a {
+//   text-decoration: none;
+//   color: rgba(230, 207, 245, 0.911);
+//   letter-spacing: 1px;
+//   font-family: "Bebas Neue", cursive;
+//   font-size: 1.1rem;
+//   background-color: transparent;
+//   // border: solid 1px rgba(53, 50, 66, 0.863);
+//   background-image: linear-gradient(
+//     to bottom right,
+//     rgb(160, 63, 240),
+//     rgba(84, 29, 139, 0.788)
+//   );
+//   padding: 0.5rem 1rem;
+//   @include mobile{
+//     font-size: 1rem;
+//     padding: 0.4rem 0.7rem;
+//   }
+// }
 
 #movie-detail {
   margin-top: 10%;
-  height: 100vh;
+  margin-bottom: 2rem;
+  // height: 100vh;
   z-index: 10;
-  position: relative;
+  // position: relative;
   display: flex;
   width: 100%;
-  justify-content: space-between;
+  // background-color: red;
+  justify-content: space-around;
+  display: grid;
+  // grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-template-columns: 1fr 60%;
+  grid-gap: 2rem;
+  @include small-desktop{
+    grid-template-columns: 1fr 55%;
+  }
+  // @include xs-desktop{
+  //   grid-template-columns: 1fr 55%;
+  // }
+  @include tablet{
+    grid-template-columns: 1fr;
+  }
+
   ul {
     list-style: none;
   }
 
   .poster-movie {
+    // width: 430px;
+    // margin-right: 1rem;
+    // background-color: red;
     width: 100%;
+    position: relative;
+    // display: flex;
+    // justify-content: center;
+    padding: 0;
     span {
       position: absolute;
       bottom: 5rem;
       right: 50%;
     }
 
-    img {
-      max-width: 80%;
-      width: 500px;
-      // margin-top: -35%;
-      position: absolute;
-      top: -80px;
+    @include tablet{
+      display: flex;
+      align-items: center;
     }
+  
 
-    .bgimg {
-      position: absolute;
-      right: 105px;
-      left: 35px;
-      top: -155px;
-      top: -6px;
-      background-color: rgb(158, 61, 238);
-      border-radius: 0.1rem;
-      background-image: linear-gradient(
-        to bottom right,
-        rgba(167, 70, 247, 0.856),
-        rgb(60, 16, 104)
-      );
-      width: 490px;
-      height: 700px;
-      z-index: -1;
+    // &:after{
+    //   content: "";
+    //   border: solid 1px blue;
+    //   background-color: red;
+    //   width: 85%;
+    //   padding: 1rem;
+    //   position: absolute;
+    //   top: 0;
+    //   height: 85%;
+    //   z-index: -1;
+    // }
+
+    img {
+      height: 100%;
+      object-fit: cover;
+      border: solid 2px rgba(143, 48, 221, 0.808);
+      margin: 0 auto;
+
+      @include tablet{
+        width: 360px;
+        // margin-top: -10%;
+      }
     }
   }
 
   .details-container {
-    // margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: linear-gradient(
+      to bottom right,
+      rgb(13, 13, 19),
+      rgba(20, 14, 22, 0.884)
+    );
+    padding: 0.5rem 2rem;
+    @include mobile{
+      padding: 0.2rem 1.3rem;
+    }
 
-    .similar-title {
-      margin-top: 3rem;
-      margin-bottom: -0.5rem;
+    .movie-title{
+      align-self: center;
+      border-bottom: none;
+      @include xs-desktop{
+        margin-bottom: -1rem;
+      }
+      span{
+        display: none;
+      }
+      h1{
+        // margin-top: 1rem;
+        font-size: 2.5rem;
+        background: -webkit-linear-gradient(rgba(167, 70, 247, 0.856), rgb(95, 30, 160));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        // border-bottom: solid 1px rgba(26, 26, 29, 0.699);
+        @include dt-break{
+          font-size: 2.2rem;
+        }
+        @include xs-desktop{
+          font-size: 1.8rem;
+        }
+        @include tablet{
+          margin-top: 1rem;
+        }
+  
+      }
+    }
+
+    .title-section{
+      border-bottom: none;
+      margin-top: 0;
     }
 
     .overview {
+      @include xs-desktop{
+        margin-bottom: -1rem;
+      }
       width: 100%;
+      // @include dt-break{
+      //   width: 60%;
+      // }
+      // margin-left: 1rem;
+
+
       p {
-        width: 520px;
-        // width: 100%;
+        // width: 520px;
+        width: 100%;
         line-height: 1.3rem;
+        // font-size: 0.7rem;
+        @include xs-desktop{
+          font-size: 0.9rem;
+        }
+        // @include mobile{
+        //   font-size: 0.8rem;
+        // }
       }
     }
 
     .detail-info {
-      margin-top: 1.5rem;
+      // margin-top: 1.5rem;
       margin-bottom: 1rem;
+      // @include dt-break{
+      //   margin-top: 0;
+      // }
       li {
+        @include xs-desktop{
+        font-size: 0.9rem;
+      }
         .contrast {
           text-transform: uppercase;
           font-weight: bold;
-          letter-spacing: 1px;
+          letter-spacing: 2px;
           color: rgb(238, 225, 248);
           // font-family: "Anton", sans-serif;
         }
@@ -828,26 +979,61 @@ a {
 
     .title-section {
       margin-top: 3rem;
+      // @include xs-desktop{
+      //   font-size: 0.9rem;
+      // }
     }
+  }
+}
 
-    .similar-movies {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-      grid-gap: 2rem;
-      width: 520px;
-      margin-top: 0.5rem;
-      div {
-        p {
-          font-size: 0.8rem;
-          text-align: center;
-        }
-        img {
-          width: 180px;
-        }
+// .movie-trailer {
+//   // margin-bottom: 1.5rem;
+//   a {
+//     cursor: pointer;
+//     background-color: transparent;
+//     color: rgb(238, 225, 248);
+//     padding: 0.6rem 2rem;
+//     border: none;
+//     margin-top: 5rem;
+//     letter-spacing: 1px;
+//     color: rgb(230, 207, 245);
+//     letter-spacing: 2px;
+//     font-family: "Bebas Neue", cursive;
+//     font-size: 1.3rem;
+//     // background-color: rgb(158, 61, 238);
+//     background-image: linear-gradient(
+//       to bottom right,
+//       rgb(160, 63, 240),
+//       rgba(84, 29, 139, 0.788)
+//     );
+//   }
+// }
+
+.similar-section{
+  .title-section{
+    border-bottom: none;
+    margin-top: 5rem;
+  }
+  .similar-movies {
+    // display: none;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-gap: 2rem;
+    width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 5rem;
+    div {
+      p {
+        font-size: 0.8rem;
+        text-align: center;
+      }
+      img {
+        max-width: 100%;
       }
     }
   }
 }
+
 
 //movie reviews
 .reviews-section {
@@ -858,11 +1044,11 @@ a {
 
 .movie-reviews {
   background-color: rgb(30, 30, 61);
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(19, 12, 22),
-    rgba(46, 18, 80, 0.788)
-  );
+  // background-image: linear-gradient(
+  //   to bottom right,
+  //   rgb(19, 12, 22),
+  //   rgba(46, 18, 80, 0.788)
+  // );
   background-image: linear-gradient(
     to bottom right,
     rgb(13, 13, 19),
