--- a/css/style.css
+++ b/css/style.css
@@ -2,31 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  background-color: #0a0a0e;
-  color: rgba(226, 192, 248, 0.836);
-  font-family: "Mulish", sans-serif;
-  overflow-x: hidden;
-}
-
-.container {
-  width: 1210px;
-  margin: 0 auto;
-}
-
-@media (max-width: 1440px) {
-  .container {
-    width: 85%;
-  }
-}
-
 header {
   background-color: rgba(24, 23, 29, 0.863);
   display: -webkit-box;
@@ -126,7 +101,7 @@ header form select:hover {
     width: 80%;
     margin: 0;
     margin-top: 0.7rem;
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 }
 
@@ -207,7 +182,6 @@ header form .filter-options {
             flex-direction: column;
     width: 85%;
     margin: 0 auto;
-    margin-top: -15rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -302,19 +276,13 @@ header .burger {
   display: none;
   position: absolute;
   right: 1rem;
+  top: 2.4rem;
 }
 
 @media (max-width: 930px) {
   header .close-nav,
   header .burger {
     display: block;
-  }
-}
-
-@media (max-width: 625px) {
-  header .close-nav,
-  header .burger {
-    margin-top: -2.6rem;
   }
 }
 
@@ -365,94 +333,6 @@ header .nav-active {
           transform: translateX(0%) !important;
   z-index: 100;
   opacity: 1;
-}
-
-#landing-page {
-  margin: 0 auto;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(34, 33, 33, 0.733)), to(rgba(116, 44, 163, 0.329))), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg") no-repeat;
-  background: linear-gradient(rgba(34, 33, 33, 0.733), rgba(116, 44, 163, 0.329)), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg") no-repeat;
-  background-position: top;
-  background-size: cover;
-  min-height: 50vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  border-bottom: solid 1px rgba(158, 61, 238, 0.164);
-  margin-bottom: 8%;
-}
-
-#landing-page .landing-txt {
-  width: 500px;
-  border-radius: 0.1rem;
-  padding: 7rem 0;
-}
-
-@media (max-width: 780px) {
-  #landing-page .landing-txt {
-    width: 90%;
-  }
-}
-
-@media (max-width: 625px) {
-  #landing-page .landing-txt {
-    width: 100%;
-  }
-}
-
-#landing-page .landing-txt h2 {
-  text-transform: uppercase;
-  font-weight: 100;
-  letter-spacing: 1px;
-  font-family: "Anton", sans-serif;
-  color: #eee1f8;
-  font-size: 2.4rem;
-}
-
-@media (max-width: 780px) {
-  #landing-page .landing-txt h2 {
-    font-size: 2rem;
-  }
-}
-
-@media (max-width: 625px) {
-  #landing-page .landing-txt h2 {
-    font-size: 1.7rem;
-  }
-}
-
-@media (max-width: 565px) {
-  #landing-page .landing-txt h2 {
-    font-size: 1.5rem;
-  }
-}
-
-#landing-page .landing-txt p {
-  color: #e2c0f8;
-  font-size: 1.3rem;
-  line-height: 2rem;
-}
-
-@media (max-width: 780px) {
-  #landing-page .landing-txt p {
-    font-size: 1.1rem;
-    line-height: 1.5rem;
-  }
-}
-
-@media (max-width: 625px) {
-  #landing-page .landing-txt p {
-    font-size: 1rem;
-  }
-}
-
-@media (max-width: 565px) {
-  #landing-page .landing-txt p {
-    font-size: 0.9rem;
-  }
 }
 
 main {
@@ -551,6 +431,16 @@ main #popular-movies {
 
 main .img-container {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 main .img-container .details-btn {
@@ -560,7 +450,9 @@ main .img-container .details-btn {
   position: absolute;
   top: 0;
   bottom: 0;
+  left: 0;
   height: 98.9%;
+  height: 100%;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -572,39 +464,52 @@ main .img-container .details-btn {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   opacity: 0;
   pointer-events: none;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
 
-@media (max-width: 780px) {
-  main .img-container .details-btn {
-    height: 99.3%;
-  }
-}
-
 main .img-container .details-btn button {
-  background-color: #9d44e2;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
-  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
+  text-decoration: none;
   border: none;
-  padding: 0.8rem 2rem;
-  position: absolute;
-  bottom: 0;
-  opacity: 0;
-  border-radius: 0.1rem;
-  color: #e6cff5;
+  color: rgba(230, 207, 245, 0.911);
   letter-spacing: 1px;
   font-family: "Bebas Neue", cursive;
+  font-size: 1.1rem;
+  background-color: transparent;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
+  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
+  padding: 0.8rem 2rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 150%);
+          transform: translate(-50%, 150%);
+  margin-bottom: 0;
+  opacity: 0;
+  border-radius: 0.1rem;
+  letter-spacing: 1px;
   font-size: 1.3rem;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
+  width: 150px;
 }
 
 @media (max-width: 780px) {
   main .img-container .details-btn button {
-    padding: 0.5rem 1.5rem;
+    width: 120px;
+  }
+}
+
+@media (max-width: 390px) {
+  main .img-container .details-btn button {
+    width: 180px;
+    -webkit-transform: translate(-50%, 220%);
+            transform: translate(-50%, 220%);
   }
 }
 
@@ -614,7 +519,15 @@ main .img-container:hover .details-btn {
 
 main .img-container:hover button {
   opacity: 1;
-  bottom: 25px;
+  -webkit-transform: translate(-50%, 100%);
+          transform: translate(-50%, 100%);
+}
+
+@media (max-width: 390px) {
+  main .img-container:hover button {
+    -webkit-transform: translate(-50%, 180%);
+            transform: translate(-50%, 180%);
+  }
 }
 
 main .movie-item {
@@ -829,6 +742,9 @@ main .movies-filter {
 #movie-banner .movie-trailer {
   position: absolute;
   top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
   z-index: 100;
 }
 
@@ -850,6 +766,7 @@ main .movies-filter {
 
 .back-home a {
   text-decoration: none;
+  border: none;
   color: rgba(230, 207, 245, 0.911);
   letter-spacing: 1px;
   font-family: "Bebas Neue", cursive;
@@ -929,7 +846,7 @@ main .movies-filter {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  border: solid 2px rgba(143, 48, 221, 0.808);
+  border: solid 2px rgba(143, 48, 221, 0.432);
   margin: 0 auto;
 }
 
@@ -1109,7 +1026,12 @@ main .movies-filter {
 
 .movie-reviews a {
   text-decoration: none;
-  color: #eee1f8;
+  border: none;
+  color: rgba(230, 207, 245, 0.911);
+  letter-spacing: 1px;
+  font-family: "Bebas Neue", cursive;
+  font-size: 1.1rem;
+  background-color: transparent;
   background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
   background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
   padding: 0.5rem 2rem;
@@ -1161,6 +1083,128 @@ main .movies-filter {
   opacity: 0;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*:focus {
+  outline: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  background-color: #0a0a0e;
+  color: rgba(226, 192, 248, 0.836);
+  font-family: "Mulish", sans-serif;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.container {
+  width: 1210px;
+  margin: 0 auto;
+}
+
+@media (max-width: 1440px) {
+  .container {
+    width: 85%;
+  }
+}
+
+#landing-page {
+  margin: 0 auto;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(34, 33, 33, 0.733)), to(rgba(116, 44, 163, 0.329))), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg") no-repeat;
+  background: linear-gradient(rgba(34, 33, 33, 0.733), rgba(116, 44, 163, 0.329)), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg") no-repeat;
+  background-position: top;
+  background-size: cover;
+  min-height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-bottom: solid 1px rgba(158, 61, 238, 0.164);
+  margin-bottom: 8%;
+}
+
+#landing-page .landing-txt {
+  width: 500px;
+  border-radius: 0.1rem;
+  padding: 7rem 0;
+}
+
+@media (max-width: 780px) {
+  #landing-page .landing-txt {
+    width: 90%;
+  }
+}
+
+@media (max-width: 625px) {
+  #landing-page .landing-txt {
+    width: 100%;
+  }
+}
+
+#landing-page .landing-txt h2 {
+  text-transform: uppercase;
+  font-weight: 100;
+  letter-spacing: 1px;
+  font-family: "Anton", sans-serif;
+  color: #eee1f8;
+  font-size: 2.4rem;
+}
+
+@media (max-width: 780px) {
+  #landing-page .landing-txt h2 {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 625px) {
+  #landing-page .landing-txt h2 {
+    font-size: 1.7rem;
+  }
+}
+
+@media (max-width: 565px) {
+  #landing-page .landing-txt h2 {
+    font-size: 1.5rem;
+  }
+}
+
+#landing-page .landing-txt p {
+  color: #e2c0f8;
+  font-size: 1.3rem;
+  line-height: 2rem;
+}
+
+@media (max-width: 780px) {
+  #landing-page .landing-txt p {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (max-width: 625px) {
+  #landing-page .landing-txt p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 565px) {
+  #landing-page .landing-txt p {
+    font-size: 0.9rem;
+  }
+}
+
 footer {
   width: 100%;
   height: 10rem;
@@ -1202,5 +1246,148 @@ footer {
 
 .hide {
   display: none;
+}
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
+  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 1000;
+}
+
+.lds-default {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-default div {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: #fcf;
+  border-radius: 50%;
+  -webkit-animation: lds-default 1.2s linear infinite;
+          animation: lds-default 1.2s linear infinite;
+}
+
+.lds-default div:nth-child(1) {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  top: 37px;
+  left: 66px;
+}
+
+.lds-default div:nth-child(2) {
+  -webkit-animation-delay: -0.1s;
+          animation-delay: -0.1s;
+  top: 22px;
+  left: 62px;
+}
+
+.lds-default div:nth-child(3) {
+  -webkit-animation-delay: -0.2s;
+          animation-delay: -0.2s;
+  top: 11px;
+  left: 52px;
+}
+
+.lds-default div:nth-child(4) {
+  -webkit-animation-delay: -0.3s;
+          animation-delay: -0.3s;
+  top: 7px;
+  left: 37px;
+}
+
+.lds-default div:nth-child(5) {
+  -webkit-animation-delay: -0.4s;
+          animation-delay: -0.4s;
+  top: 11px;
+  left: 22px;
+}
+
+.lds-default div:nth-child(6) {
+  -webkit-animation-delay: -0.5s;
+          animation-delay: -0.5s;
+  top: 22px;
+  left: 11px;
+}
+
+.lds-default div:nth-child(7) {
+  -webkit-animation-delay: -0.6s;
+          animation-delay: -0.6s;
+  top: 37px;
+  left: 7px;
+}
+
+.lds-default div:nth-child(8) {
+  -webkit-animation-delay: -0.7s;
+          animation-delay: -0.7s;
+  top: 52px;
+  left: 11px;
+}
+
+.lds-default div:nth-child(9) {
+  -webkit-animation-delay: -0.8s;
+          animation-delay: -0.8s;
+  top: 62px;
+  left: 22px;
+}
+
+.lds-default div:nth-child(10) {
+  -webkit-animation-delay: -0.9s;
+          animation-delay: -0.9s;
+  top: 66px;
+  left: 37px;
+}
+
+.lds-default div:nth-child(11) {
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
+  top: 62px;
+  left: 52px;
+}
+
+.lds-default div:nth-child(12) {
+  -webkit-animation-delay: -1.1s;
+          animation-delay: -1.1s;
+  top: 52px;
+  left: 62px;
+}
+
+@-webkit-keyframes lds-default {
+  0%, 20%, 80%, 100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+}
+
+@keyframes lds-default {
+  0%, 20%, 80%, 100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
 }
 /*# sourceMappingURL=style.css.map */
