--- a/css/style.css
+++ b/css/style.css
@@ -105,10 +105,9 @@ header form select:hover {
   }
 }
 
-header form button {
+header form a {
   cursor: pointer;
-  width: 75px;
-  padding: 0.5rem;
+  padding: 0.5rem 0.8rem;
   height: 40px;
   background-color: transparent;
   color: rgba(230, 207, 245, 0.644);
@@ -126,7 +125,7 @@ header form button {
 }
 
 @media (max-width: 930px) {
-  header form button {
+  header form a {
     margin-top: 0.7rem;
     width: 40%;
   }
@@ -250,7 +249,7 @@ header input {
 }
 
 header input:focus {
-  border: solid 1px rgba(158, 61, 238, 0.658);
+  border: solid 1px rgba(158, 61, 238, 0.349);
 }
 
 header #search {
@@ -387,30 +386,27 @@ main .pagination {
   margin-top: 2rem;
 }
 
-main .pagination button {
+main .pagination a {
   cursor: pointer;
-  background-color: transparent;
-  border: solid 2px rgba(168, 83, 224, 0.233);
-  border: solid 2px #8e33d3;
-  font-size: 1rem;
-  margin: 0.2rem;
   border-radius: 6rem;
-  color: rgba(226, 192, 248, 0.692);
-  font-size: 0.9rem;
-  width: 40px;
-  height: 40px;
+  border: solid 2px #8e33d3;
+  margin: 0.2rem;
 }
 
-main .pagination button:hover {
+main .pagination a:hover {
   background-color: rgba(168, 83, 224, 0.356);
   color: #f0e9e9;
 }
 
-main .pagination button i {
+main .pagination a i {
   pointer-events: none;
+  padding: 0.5rem 0.7rem;
+  margin: 0.2rem;
+  color: rgba(226, 192, 248, 0.692);
+  font-size: 0.9rem;
 }
 
-main .movies-filter,
+main #movies-filter,
 main #popular-movies {
   display: -ms-grid;
   display: grid;
@@ -422,7 +418,7 @@ main #popular-movies {
 }
 
 @media (max-width: 780px) {
-  main .movies-filter,
+  main #movies-filter,
   main #popular-movies {
     -ms-grid-columns: (minmax(150px, 1fr))[auto-fill];
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
@@ -698,7 +694,7 @@ main #filtered-movies #movie-name {
   }
 }
 
-main .movies-filter {
+main #movies-filter {
   margin-top: 3%;
 }
 
@@ -1096,6 +1092,7 @@ main .movies-filter {
 
 a {
   text-decoration: none;
+  color: rgba(230, 207, 245, 0.911);
 }
 
 body {
@@ -1214,6 +1211,10 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1221,6 +1222,17 @@ footer {
   background-image: linear-gradient(to right, #0a0a0e, #151118);
   border-top: solid 1px #1b161f;
   color: #7a5f8d;
+}
+
+footer p {
+  margin-bottom: 0.2rem;
+  border-bottom: solid 1px #1b161f;
+  padding: 0 0 0.2rem 0;
+}
+
+footer i {
+  cursor: pointer;
+  margin: 0.2rem;
 }
 
 .movie-detail2 ul {
@@ -1266,128 +1278,5 @@ footer {
       -ms-flex-align: center;
           align-items: center;
   z-index: 1000;
-}
-
-.lds-default {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-
-.lds-default div {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  background: #9e3dee;
-  border-radius: 50%;
-  -webkit-animation: lds-default 1.2s linear infinite;
-          animation: lds-default 1.2s linear infinite;
-}
-
-.lds-default div:nth-child(1) {
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-  top: 37px;
-  left: 66px;
-}
-
-.lds-default div:nth-child(2) {
-  -webkit-animation-delay: -0.1s;
-          animation-delay: -0.1s;
-  top: 22px;
-  left: 62px;
-}
-
-.lds-default div:nth-child(3) {
-  -webkit-animation-delay: -0.2s;
-          animation-delay: -0.2s;
-  top: 11px;
-  left: 52px;
-}
-
-.lds-default div:nth-child(4) {
-  -webkit-animation-delay: -0.3s;
-          animation-delay: -0.3s;
-  top: 7px;
-  left: 37px;
-}
-
-.lds-default div:nth-child(5) {
-  -webkit-animation-delay: -0.4s;
-          animation-delay: -0.4s;
-  top: 11px;
-  left: 22px;
-}
-
-.lds-default div:nth-child(6) {
-  -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s;
-  top: 22px;
-  left: 11px;
-}
-
-.lds-default div:nth-child(7) {
-  -webkit-animation-delay: -0.6s;
-          animation-delay: -0.6s;
-  top: 37px;
-  left: 7px;
-}
-
-.lds-default div:nth-child(8) {
-  -webkit-animation-delay: -0.7s;
-          animation-delay: -0.7s;
-  top: 52px;
-  left: 11px;
-}
-
-.lds-default div:nth-child(9) {
-  -webkit-animation-delay: -0.8s;
-          animation-delay: -0.8s;
-  top: 62px;
-  left: 22px;
-}
-
-.lds-default div:nth-child(10) {
-  -webkit-animation-delay: -0.9s;
-          animation-delay: -0.9s;
-  top: 66px;
-  left: 37px;
-}
-
-.lds-default div:nth-child(11) {
-  -webkit-animation-delay: -1s;
-          animation-delay: -1s;
-  top: 62px;
-  left: 52px;
-}
-
-.lds-default div:nth-child(12) {
-  -webkit-animation-delay: -1.1s;
-          animation-delay: -1.1s;
-  top: 52px;
-  left: 62px;
-}
-
-@-webkit-keyframes lds-default {
-  0%, 20%, 80%, 100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
-  }
-}
-
-@keyframes lds-default {
-  0%, 20%, 80%, 100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
-  }
 }
 /*# sourceMappingURL=style.css.map */
